--- a/Example/Example/DiscrepantNameViewController/Another.storyboard
+++ b/Example/Example/DiscrepantNameViewController/Another.storyboard
@@ -25,7 +25,7 @@
                                     <constraint firstAttribute="width" constant="240" id="BnK-aq-nZZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                                <state key="normal" title="Discrepant Storyboard">
+                                <state key="normal" title="View Controller Storyboard">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
